# ProjectSoftwareEngineering

./: CMakeLists.txt  DesignByContract.h  OUTPUTverkeer.txt  README.md  TESTS.cpp  baan.cpp  baan.h  bushalte.cpp  bushalte.h  kruispunt.cpp  kruispunt.h  main.cpp  simulationUtils.cpp  simulationUtils.h  testBaan.h  testBushalte.h  testGenerator.h  testInput.h  testKruispunt.h  testOutput.h  testVoertuig.h  verkeerslicht.cpp  verkeerslicht.h  voertuig.cpp  voertuig.h  voertuiggenerator.cpp  voertuiggenerator.h  voorbeeld.xml  xmlImporter.cpp  xmlImporter.h  xmlexporter.h
testInput/: happyDayGame.xml  illegalSimulation1.txt  illegalSimulation1.xml  illegalSimulation2.txt  illegalSimulation2.xml  illegalSimulation3.xml  illegalSimulation4.txt  illegalSimulation4.xml  xmlsyntaxerror1.txt  xmlsyntaxerror1.xml  xmlsyntaxerror10.xml  xmlsyntaxerror2.xml  xmlsyntaxerror3.xml  xmlsyntaxerror4.txt  xmlsyntaxerror4.xml  xmlsyntaxerror5.xml  xmlsyntaxerror6.xml  xmlsyntaxerror7.xml  xmlsyntaxerror8.xml  xmlsyntaxerror9.xml
testOutput/: file2.txt  happyDayExpectedOut.txt
xmlTests/: voorbeeld.xml  voorbeeld2.xml  voorbeeld3.xml
